samples/_failures_safe/1761070898_9aedc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db0d8378.c: In function ‘parser_init’:
./samples/SAFE/__tmp_db0d8378.c:164:5: error: expected expression at end of input
  164 |     parser->current_token =
      |     ^~~~~~
./samples/SAFE/__tmp_db0d8378.c:164:5: error: expected declaration or statement at end of input
